update mkhome target to update

--- a/emacs.org
+++ b/emacs.org
@@ -569,10 +569,10 @@ window.  This probably could be simplified by using something like [[https://git
        (cd (getenv "HOME"))
        (compile (mapconcat 'shell-quote-argument (list "make" "-f" "Makefile.mkhome" ,target) " ")))))
 
-(defun forge-mkhome-git ()
+(defun forge-mkhome-update ()
   "Run mkhome git."
   (interactive)
-  (forge-mkhome-target "git"))
+  (forge-mkhome-target "update"))
 
 (defun forge-mkhome-www ()
   "Run mkhome www."
@@ -1171,7 +1171,7 @@ This is my personal keymap that then hooks into different commands, hydras, or o
 
 #+begin_src emacs-lisp
 (define-prefix-command 'forge-mkhome-map)
-(define-key forge-mkhome-map (kbd "g") 'forge-mkhome-git)
+(define-key forge-mkhome-map (kbd "g") 'forge-mkhome-update)
 (define-key forge-mkhome-map (kbd "w") 'forge-mkhome-www)
 
 (define-prefix-command 'forge-map)
