minor tweak to how orderless is configured

--- a/emacs.org
+++ b/emacs.org
@@ -1309,8 +1309,7 @@ perspective, integrates well with Emacs.
 (use-package orderless
   :ensure t
   :demand t
-  :config
-  (setq completion-styles '(substring orderless)))
+  :custom (completion-styles '(orderless)))
 
 ;; https://github.com/raxod502/selectrum
 (use-package selectrum
