--- a/emacs.org
+++ b/emacs.org
@@ -3,6 +3,7 @@
 #+OPTIONS: toc:4 h:3
 #+PROPERTY: header-args:emacs-lisp :tangle "init.el" :results silent :exports code
 #+MACRO: export-date (eval (format-time-string "%F %R %z" (current-time)))
+#+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 
 Updated: *{{{export-date}}}*
 
