--- a/emacs.org
+++ b/emacs.org
@@ -2038,7 +2038,7 @@ This includes things like folding XML sections.
 #+begin_src emacs-lisp
 (use-package hideshow
   :diminish hs-minor-mode
-  :hook ((prog-mode text-mode) . hs-minor-mode)
+  :hook ((prog-mode) . hs-minor-mode)
   :bind (("C-c h" . hs-toggle-hiding)))
 #+end_src
 ** Network device configurations
