fix org-timer hooks

--- a/emacs.org
+++ b/emacs.org
@@ -3260,9 +3260,9 @@ Miscellaneous notes:
   :hook
   ((org-mode . forge/org-mode-hook)
    (after-save . forge/tangle-org-mode-on-save)
-   (org-timer-set-hook . forge/org-timer-clock-in)
-   (org-timer-done-hook . forge/org-timer-clock-out)
-   (org-timer-stop-hook . forge/org-timer-clock-out)
+   (org-timer-set . forge/org-timer-clock-in)
+   (org-timer-done . forge/org-timer-clock-out)
+   (org-timer-stop . forge/org-timer-clock-out)
    (org-mode . variable-pitch-mode))
 
   :custom
