--- a/emacs.org
+++ b/emacs.org
@@ -3154,13 +3154,14 @@ I don't use MPD much anymore.  I used to use [[https://github.com/pft/mingus][Mi
 #+begin_src emacs-lisp
 (use-package emms
   :ensure t
+  :custom
+  (emms-directory (expand-file-name "emms" forge-state-dir))
+  (emms-source-file-default-directory (expand-file-name "~/annex/Audio"))
   :config
   (emms-all)
   (emms-history-load)
-  (setq emms-directory (expand-file-name "emms" forge-state-dir)
-        emms-player-list (list emms-player-mpv)
+  (setq emms-player-list (list emms-player-mpv)
         emms-stream-info-backend 'mplayer
-        emms-source-file-default-directory (expand-file-name "~/annex/Audio")
         emms-source-file-directory-tree-function 'emms-source-file-directory-tree-find
         emms-browser-covers 'emms-browser-cache-thumbnail)
   (add-to-list 'emms-player-mpv-parameters "--no-audio-display")
@@ -3173,7 +3174,6 @@ I don't use MPD much anymore.  I used to use [[https://github.com/pft/mingus][Mi
         (delete 'emms-info-mp3info emms-info-functions))
     (add-to-list 'emms-info-functions 'emms-info-ogginfo)
     (add-to-list 'emms-info-functions 'emms-info-mp3info)))
-
 
 #+end_src
 ** Network related
