work on adding ibuffer

--- a/emacs.org
+++ b/emacs.org
@@ -1317,7 +1317,7 @@ The nice thing about completion frameworks is that they support interactively
 narrowing a set of results.  I typically look for something that, from my
 perspective, integrates well with Emacs.
 
-*** Selectrum, Consult, and friends
+*** Orderless, Consult, and friends
 
 #+begin_src emacs-lisp
 ;; https://github.com/minad/vertico
@@ -1601,6 +1601,45 @@ the window contents.
     "Enable features to focus."
     (interactive)
     (olivetti-mode)))
+#+end_src
+*** ibuffer
+#+begin_src emacs-lisp
+(use-package ibuffer
+  :bind ("C-x C-b" . ibuffer)
+  :custom
+  (ibuffer-saved-filter-groups
+   '(("default"
+      ("Magit"
+       (or
+        (mode . magit-status-mode)
+        (mode . magit-log-mode)
+        (name . "\\*magit")
+        (name . "magit-")
+        (name . "git-monitor")))
+      ("Org"
+       (or
+        (name . "^\\*Calendar\\*$")
+        (name . "^\\*Org Agenda")
+        (name . "^ \\*Agenda")
+        (name . "^diary$")
+        (mode . org-mode)))
+      ("Dired" (mode . dired-mode))
+      ("Commands"
+       (or
+        (mode . shell-mode)
+        (mode . eshell-mode)
+        (mode . term-mode)
+        (mode . compilation-mode)))
+      ("Lisp"
+       (mode . emacs-lisp-mode))
+      ("Emacs"
+       (or
+        (filename . ".emacs.d/emacs.org")
+        (name . "^\\*scratch\\*$")
+        (name . "^\\*Messages\\*$")
+        (name . "^\\*\\(Customize\\|Help\\)")
+        (name . "\\*\\(Echo\\|Minibuf\\)")))))))
+
 #+end_src
 ** Scrolling
 This is an attempt to make scrolling a bit smoother and friendlier.
