rename native-comp-eln path

--- a/emacs.org
+++ b/emacs.org
@@ -135,7 +135,7 @@ relocated to /.emacs.d/var/.
 
 ;; native compilation
 (when (forge/native-comp-p)
-  (add-to-list 'native-comp-eln-load-path (locate-user-emacs-file "var/eln-cache"))
+  (add-to-list 'native-comp-eln-load-path (locate-user-emacs-file "var/eln"))
   (setq native-comp-deferred-compilation t))
 
 ;; package quickstart
