set native-comp warnings to silent and update notmuch bulk query

--- a/emacs.org
+++ b/emacs.org
@@ -136,7 +136,8 @@ relocated to /.emacs.d/var/.
 ;; native compilation
 (when (forge/native-comp-p)
   (add-to-list 'native-comp-eln-load-path (locate-user-emacs-file "var/eln"))
-  (setq native-comp-deferred-compilation t))
+  (setq native-comp-deferred-compilation t)
+  (setq native-comp-async-report-warnings-errors 'silent))
 
 ;; package quickstart
 (setq package-enable-at-startup t)            ;; initialize now with package-quickstart
@@ -267,7 +268,7 @@ Configure Emacs to use the above defined paths.  Also configure some basic behav
   ;; when native compilation is available ...
   (when (forge/native-comp-p)
     (setq native-comp-deferred-compilation t
-          native-comp-async-report-warnings-errors nil
+          native-comp-async-report-warnings-errors 'silent
           package-native-compile t))
   ;;
   (add-to-list 'load-path forge-site-dir)
@@ -3082,7 +3083,7 @@ Will open a notmuch search buffer of the search results."
                                  (:name "Needs attention" :key "!" :query "tag:inbox and ( tag:abuse or tag:flagged )")
                                  (:name "Sent"            :key "s" :query "tag:sent")
                                  (:name "Attachments"     :key "A" :query "tag:attachment")
-                                 (:name "Bulk"            :key "B" :query "tag:bulk")
+                                 (:name "Bulk"            :key "B" :query "tag:bulk and tag:unread")
                                  (:name "Meeting Invites" :key "c" :query "mimetype:text/calendar"))))
 
 #+end_src
